# ArcadeGamesGlfw

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  archivate.py  archivate_assets.py  convert.bat
Assets/Localization/: lang.lang
Assets/Snake/: chess.frag
src/: ImguiContext.cpp  ImguiContext.h  IntroContext.cpp  IntroContext.h  main.cpp  main.h
src/Games/Base/: BaseGame.h
src/Games/PacMan/: Pacman.cpp  Pacman.h
src/Games/Pacman/: Pacman.cpp  Pacman.h  PacmanMap.cpp  PacmanMap.h
src/Games/Snake/: Other.h  Snake.cpp  Snake.h  SnakeMap.cpp  SnakeMap.h  Texture.h
src/Games/TileEngine/: Other.h  Sound.cpp  Sound.h  Texture.cpp  Texture.h  TileEngine.cpp  TileEngine.h
src/Utils/: BaseGame.h  Context.h  Font.cpp  Font.h  LOG.h  Localization.cpp  Localization.h  SoundFile.cpp  SoundFile.hpp  System.h  SystemAdapter.cpp  SystemAdapter.h  Texture.cpp  Texture.h  ZipArchive.cpp  ZipArchive.h  debug.h
src/Utils/Audio/: Sound.cpp  Sound.h
src/Utils/Render/: Font.cpp  Font.h  MergedRender.h  Texture.cpp
src/Utils/Render/UI/: Button.cpp  UI.cpp  UI.h
src/Utils/System/: Localization.cpp
